# ateos

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .swcrc  LICENSE  README.md  babel.config.js  index.d.ts  jsconfig.json  package.json  shanifile.js  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.types.json
.ateos/: config.json  dev.json  pack.task.js  publish.task.js
share/media/: ateos.txt
share/media/spinner/: logo.js  spinner.html
src/: common.ts  index.ts
src/app/: app.js  ateos.js  ateox.js  cli.js  main.js  repl.js  typescript.js
src/glosses/app/: app_helper.js  application.js  index.js  index.ts  run.js  state_machine.js  subsystem.js
src/glosses/compressors/snappy/native/: CMakeLists.txt
src/glosses/compressors/snappy/native/src/: snappy.cc
src/glosses/compressors/snappy/native/src/snappy/: CMakeLists.txt
src/glosses/fs/extra/watcher/native/: CMakeLists.txt
src/shani/: external_runner.js  index.js  runner.js
src/tasks/: application.js
tasks/: application.js  application_project.js  helpers.js  tsconfig.json
tasks/private/: ateos_transpile.js  ateos_transpile_exe.js  realm_merge.js  register_cli_command.js
tasks/public/: build.js  clean.js  cmake.js  copy.js  increase_version.js  install_modules.js  realm_fork.js  realm_info.js  realm_init.js  realm_pack.js  realm_publish.js  rollup.js  specter_check.js  specter_info.js  specter_info.ts  specter_install_software.js  specter_run.js  specter_software.js  ssh_check.js  ssh_software.js  transpile.js  transpile_exe.js  tsc.js  watch.js
tests/: .eslintrc.js
tests/app/: configuration.test.js
tests/cli/: index.test.js
tests/glosses/: index.test.js
tests/metatests/: index.js
tests/project/: index.test.js
tests/shani/: index.test.js  test.js
types/: async.d.ts  ateos.d.ts  index.d.ts  tsconfig.json
types/glosses/: app.d.ts  archives.d.ts  assertion.d.ts  compressors.d.ts  data.d.ts  datetime.d.ts  errors.d.ts  events.d.ts  fake.d.ts  fast.d.ts  fs.d.ts  is.d.ts  meta.d.ts  promise.d.ts  regex.d.ts  semver.d.ts  shani-global.d.ts  shani.d.ts  std.d.ts  streams.d.ts  utils.d.ts  vault.d.ts
(+3085 files in other folders)
